--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -656,7 +656,7 @@
    "source": [
     "## 9 $\\,$ Results\n",
     "\n",
-    "### 9.1 Tabular Performance (Absolute)\n",
+    "### 9.1 Tabular Perf (Abs)\n",
     "\n",
     "| Metric                | Strategy 1 | Strategy 2 |\n",
     "|-----------------------|------------|------------|\n",
@@ -666,7 +666,7 @@
     "| Max Drawdown          | -0.0641    | -0.1101    |\n",
     "| Sharpe Ratio          | 2.5909     | 2.1228     |\n",
     "\n",
-    "### 9.2 Tabular Performance $(\\%)$\n",
+    "### 9.2 Tabular Perf $(\\%)$\n",
     "\n",
     "| Metric                | Strategy 1 (%) | Strategy 2 (%) |\n",
     "|-----------------------|----------------|----------------|\n",
@@ -676,8 +676,32 @@
     "| Max Drawdown          | -6.41          | -11.02         |\n",
     "| Sharpe Ratio          | 2.5909         | 2.1221         |\n",
     "\n",
-    "### 9.3 Strategy Performance Plot\n",
-    "\n"
+    "### 9.3 Strat Perf Plot\n",
+    "\n",
+    "<img src=\"./fe630-fp-figs/fe630-fp-fig1-perf.png\" alt=\"Sampling Distributions of Estimators\" style=\"width:100%; max-width:800px;\"/>\n",
+    "\n",
+    "<figcaption style=\"text-align: center;\"><i>Figure 1 - Strat Perf</i></figcaption>\n",
+    "\n",
+    "### 9.4 Strat Anal\n",
+    "\n",
+    "1. **Cumulative Return**:\n",
+    "   - **Strategy 1** has a significantly higher cumulative return (193.57%) compared to **Strategy 2** (139.75%). This indicates that Strategy 1 generated more total returns over the period from 2007 to 2024.\n",
+    "\n",
+    "2. **Annualized Return**:\n",
+    "   - The annualized return for **Strategy 1** (31.20%) is higher than that of **Strategy 2** (25.46%). This suggests that, on average, Strategy 1 provided better yearly returns.\n",
+    "\n",
+    "3. **Annualized Volatility**:\n",
+    "   - Both strategies have similar annualized volatility (12.04% for Strategy 1 and 12.00% for Strategy 2). This indicates that both strategies experienced similar levels of risk or variability in returns.\n",
+    "\n",
+    "4. **Max Drawdown**:\n",
+    "   - **Strategy 1** has a lower maximum drawdown (-6.41%) compared to **Strategy 2** (-11.02%). A lower drawdown means that Strategy 1 experienced less severe declines from its peak value, indicating better risk management or resilience during downturns.\n",
+    "\n",
+    "5. **Sharpe Ratio**:\n",
+    "   - The Sharpe ratio, which measures risk-adjusted return, is higher for **Strategy 1** (2.5909) compared to **Strategy 2** (2.1221). This indicates that Strategy 1 provided better returns per unit of risk taken, making it the more efficient strategy in terms of reward-to-risk ratio.\n",
+    "\n",
+    "### 9.5 Synthesis\n",
+    "\n",
+    "Overall, **Strategy 1** outperforms **Strategy 2** across all key metrics: cumulative return, annualized return, max drawdown, and Sharpe ratio. Despite having similar levels of volatility, Strategy 1 offers superior returns and better risk-adjusted performance, making it the preferred strategy based on the analyzed data."
    ]
   }
  ],
