--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -703,6 +703,25 @@
     "\n",
     "Overall, **Strategy 1** outperforms **Strategy 2** across all key metrics: cumulative return, annualized return, max drawdown, and Sharpe ratio. Despite having similar levels of volatility, Strategy 1 offers superior returns and better risk-adjusted performance, making it the preferred strategy based on the analyzed data."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10 $\\,$ La Fin\n",
+    "\n",
+    "$$\n",
+    "\\textbf{Don't let the bedbugs bite.} \\; <3\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\textbf{Quod Erat Demonstrandum.}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\textbf{終わり。}\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
