--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "## 0 $\\,$ Disclaimer\n",
     "\n",
-    "This work is in response to the original (numerical) grade received as a $25\\%$ due to my imprudence and deviation from the requested prompt.\n",
+    "This work is in response to the original (numerical) grade received as a $\\bf{25\\%}$ due to my imprudence and deviation from the requested prompt.\n",
     "\n",
     "I (profusely) apologize for my incompetence; I will take corrective action."
    ]
