--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -25,6 +25,51 @@
     "\n",
     "I (profusely) apologize for my incompetence; I will take corrective action."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1 $\\,$ Overview\n",
+    "\n",
+    "### 1.1 Goal\n",
+    "\n",
+    "The goal of this project to build and compare *two factor-based long short allocation models* with constraints on their *betas*. The first strategy considers a **target Beta** in the interval $[-0.5, 0.5]$, while the second has a target Beta in the interval $[-2, +2]$.\n",
+    "\n",
+    "The first strategy operates similar to a **Value-at-Risk Utility** corresponding to **Robust Optimization**; the second strategy incorporates an **Information Ratio** term to limit the deviations from a benchmark, provided those deviations yield a 'high return.'\n",
+    "\n",
+    "Once the optimization models are built, we want to *compare* the outcomes of the two models while simultaneously evaluating their sensitivity to the *length* of the estimators for the **covariance matrix** in tandem with the **expected returns** under various market regimes/scenarios.\n",
+    "\n",
+    "### 1.2 Reallocation\n",
+    "\n",
+    "The portfolios will be *reallocated* or, in other words, 'reoptimized' weekly from the beginning of **March 2007** to the end of **March 2024**. Our *investment universe* encompasses a set of exchange-traded funds (**ETFs**) which is large enough to represent the '**Global World Economy**' (as according to some).\n",
+    "\n",
+    "We will utilize the [Fama–French Three-Factor Model](https://en.wikipedia.org/wiki/Fama%E2%80%93French_three-factor_model) which incorporates the following factors:\n",
+    "- [Momentum](https://en.wikipedia.org/wiki/Momentum_investing)\n",
+    "- [Value](https://en.wikipedia.org/wiki/Value_investing)\n",
+    "- [Size](https://en.wikipedia.org/wiki/Market_capitalization).\n",
+    "\n",
+    "Regarding data accessability, these factors have historical values available for ***free*** from ***Ken French's*** [personal website](https://mba.tuck.dartmouth.edu/pages/faculty/ken.french/) in tandem with Yahoo Finance.\n",
+    "\n",
+    "### 1.3 Performance Evaluation\n",
+    "\n",
+    "Naturally, the performance as well as the risk profiles of the aforementioned strategies may be (relatively) sensitive to the *target Beta* and the (current) market environment. \n",
+    "\n",
+    "For example, a '**low Beta**' (essentially) means that a strategy is created with the objective or aim to be '**decorrelated**' (no linear relationship between entites) with the 'Global Market,' which, in our case, is represented by the **S&P 500** (i.e., no *systematic relationship*).\n",
+    "\n",
+    "A '**high Beta**' is simply the antithesis, or opposite, of what we just discussed. In layman's terms, we have a (higher) appetite for '*risk*' (in this case, let's keep it simple and define our premise as $\\sigma$ or **standard deviation**) and desire to ride or 'scale up' the *market risk* (**systematic risk**). \n",
+    "\n",
+    "Moreover, it's imperative that one acknowledges that such a (described) strategy is more probable to be (quite) sensitive to the *estimators* used for the **Risk Model** and the **Alpha Model** (e.g., the length of the *look-back period* utilized); therefore, it is necessary to understand and, most importantly, *comprehend* the impact of said estimators on the **Portfolio's** characteristics:\n",
+    "- (Realized) [Return](https://en.wikipedia.org/wiki/Rate_of_return) : $\\mu_h$\n",
+    "\n",
+    "- (Historical) [Volatility](https://en.wikipedia.org/wiki/Volatility_(finance)) : $\\sigma_h$\n",
+    "\n",
+    "- [Skewness](https://en.wikipedia.org/wiki/Skewness) : $(\\mathbb{E}[(\\frac{x - \\mu}{\\sigma})^3]) = \\frac{\\mu_3}{\\sigma_3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}}$\n",
+    "\n",
+    "- [VaR](https://en.wikipedia.org/wiki/Value_at_risk) / [Expected Shortfall](https://en.wikipedia.org/wiki/Expected_shortfall)\n",
+    "\n",
+    "- [Sharpe Ratio](https://en.wikipedia.org/wiki/Sharpe_ratio) : $S_a = \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}}$"
+   ]
   }
  ],
  "metadata": {
