--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -77,9 +77,9 @@
     "\n",
     "To (briefly) summarize, the behavior of a (potential) '*optimal*' portfolio built from a melting pot of *estimators* for **Covariance** and **Expected Return** may vary according to the cadence of the '**Market**' (environment/regime) or an aforementioned strategy. \n",
     "\n",
-    "For example, the (mathematical) notation $S_{40}^{90}$ is just fancy jargon to visually illustrate that we are using **40 days** for the covariance estimation and **90 days** for the expected returns estimations—it's not that deep.\n",
+    "For example, the (mathematical) notation $S_{40}^{90}$ is implemented to illustrate that we are using **40 days** for the covariance estimation and **90 days** for the expected returns estimations.\n",
     "\n",
-    "Overall, the goal of this fun, entertaining project is to conceptualize, visualize, understand, analyze, and compare the behavior of our ideas; we want to *see* if we can (actually) make some $\\boldsymbol{\\$\\$\\$}$, especially during momentous, historical (time) periods such as the **Subprime Mortgage Crisis** of *2008*, the horrendous commencement of **Coronavirus SARS-CoV-2 Disease** of *2019*, et cetera."
+    "Overall, the goal of this experiment is to conceptualize, visualize, understand, analyze, and compare the behavior of our hypotheses; we want to see if we can deliver robust risk-adjusted performance, especially during momentous, historical periods such as the **Subprime Mortgage Crisis** of *2008*, the horrendous commencement of **Coronavirus SARS-CoV-2 Disease** of *2019*, et cetera."
    ]
   },
   {
