--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -77,7 +77,15 @@
     "- ***Mid-Term Estimator (MTE)*** : $\\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\}$.\n",
     "- ***Short-Term Estimator (STE)*** : $\\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\}$. \n",
     "\n",
-    "Specifically, we define a **Term-Structure** for the $\\text{Covariance} \\; \\boldsymbol{\\Sigma}$ and $\\text{Expected Return} \\; \\boldsymbol{\\mu}$."
+    "Specifically, we define a **Term-Structure** for the $\\text{Covariance} \\; \\boldsymbol{\\Sigma}$ and $\\text{Expected Return} \\; \\boldsymbol{\\mu}$.\n",
+    "\n",
+    "### 1.5 Synthesis\n",
+    "\n",
+    "To (briefly) summarize, the behavior of a (potential) '*optimal*' portfolio built from a melting pot of *estimators* for **Covariance** and **Expected Return** may vary according to the cadence of the '**Market**' (environment/regime) or an aforementioned strategy. \n",
+    "\n",
+    "For example, the (mathematical) notation $S_{40}^{90}$ is implemented to illustrate that we are using **40 days** for the covariance estimation and **90 days** for the expected returns estimations.\n",
+    "\n",
+    "Overall, the goal of this experiment is to conceptualize, visualize, understand, analyze, and compare the behavior of our hypotheses; we want to see if we can deliver robust risk-adjusted performance, especially during momentous, historical periods such as the **Subprime Mortgage Crisis** of *2008*, the horrendous commencement of **Coronavirus SARS-CoV-2 Disease** of *2019*, et cetera."
    ]
   }
  ],
