--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -87,6 +87,15 @@
     "\n",
     "Overall, the goal of this experiment is to conceptualize, visualize, understand, analyze, and compare the behavior of our hypotheses; we want to see if we can deliver robust risk-adjusted performance, especially during momentous, historical periods such as the **Subprime Mortgage Crisis** of *2008*, the horrendous commencement of **Coronavirus SARS-CoV-2 Disease** of *2019*, et cetera."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2 $\\,$ (Investment) Strategy\n",
+    "\n",
+    "This section delves into the theoretical and mathematical formulations for the investment strategy employed; it is not for the faint of heart."
+   ]
   }
  ],
  "metadata": {
