--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -94,7 +94,58 @@
    "source": [
     "## 2 $\\,$ (Investment) Strategy\n",
     "\n",
-    "This section delves into the theoretical and mathematical formulations for the investment strategy employed; it is not for the faint of heart."
+    "This section delves into the theoretical and mathematical formulations for the investment strategy employed; it is not for the faint of heart.\n",
+    "\n",
+    "### 2.1 (Mathematical) Strategic Formulation\n",
+    "\n",
+    "Consider the following two strategies:\n",
+    "\n",
+    "$$\n",
+    "\\text{(Strategy I)} \n",
+    "\\quad \n",
+    "\n",
+    "\\begin{cases}\n",
+    "\n",
+    "\\underset{\\omega \\in \\mathbb{R}^n} \\max \\; \\rho^T \\omega - \\lambda \\sqrt{\\omega^T \\Sigma \\omega} \n",
+    "\\\\\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "-0.5 \\leq \\sum_{i=1}^n \\beta_i^m \\omega_i \\leq 0.5 \n",
+    "\n",
+    "\\\\\n",
+    "\\\\\n",
+    "\\sum_{i=1}^n \\omega_i = 1, \\quad -2 \\leq \\omega_i \\leq 2,\n",
+    "\\end{cases} \n",
+    "\\quad \n",
+    "\n",
+    "\\tag{1}\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\text{(Strategy II)} \n",
+    "\\quad \n",
+    "\n",
+    "\\begin{cases}\n",
+    "\n",
+    "\\underset{\\omega \\in \\mathbb{R}^n} \\max \\; \\frac{\\rho^T \\omega}{\\text{TEV}(\\omega)} - \\lambda \\sqrt{\\omega^T \\Sigma \\omega} \n",
+    "\\\\\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "-2 \\leq \\sum_{i=1}^n \\beta_i^m \\omega_i \\leq 2 \n",
+    "\n",
+    "\\\\\n",
+    "\\\\\n",
+    "\\sum_{i=1}^n \\omega_i = 1, \\quad -2 \\leq \\omega_i \\leq 2,\n",
+    "\n",
+    "\\end{cases} \n",
+    "\\quad \n",
+    "\n",
+    "\\tag{2}\n",
+    "$$"
    ]
   }
  ],
