--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -145,6 +145,17 @@
     "\\quad \n",
     "\n",
     "\\tag{2}\n",
+    "$$\n",
+    "\n",
+    "where we define the constructions above:\n",
+    "- $\\Sigma$ is the [covariance matrix](https://en.wikipedia.org/wiki/Covariance_matrix) between the securities returns (as computed from the **FF3FM**);\n",
+    "\n",
+    "- $\\beta_i^m = \\frac{\\text{Cov}(r_i, r_M)}{\\sigma^2(r_M)}$ is the [Beta](https://en.wikipedia.org/wiki/Beta_(finance)) of some [security](https://en.wikipedia.org/wiki/Security_(finance)) $S_i$ as defined by the [CAPM Model](https://en.wikipedia.org/wiki/Capital_asset_pricing_model) such that $\\beta_P^m = \\sum_{i = 1}^n \\beta_i^m \\omega_i$ is the **Portfolio Beta**;\n",
+    "\n",
+    "- $\\text{TEV}(\\omega) = \\sigma(r_P(\\omega) - r_{\\text{SPY}})$ is the '**Tracking Error Volatility**'; the derivation is trivial and left as an exercise to the reader:\n",
+    "\n",
+    "$$\n",
+    "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2} \\tag{3}\n",
     "$$"
    ]
   }
