--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -155,7 +155,7 @@
     "- $\\text{TEV}(\\omega) = \\sigma(r_P(\\omega) - r_{\\text{SPY}})$ is the '**Tracking Error Volatility**'; the derivation is trivial and left as an exercise to the reader:\n",
     "\n",
     "$$\n",
-    "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2} \\tag{3}\n",
+    "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2}. \\tag{3}\n",
     "$$"
    ]
   }
