--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -156,6 +156,20 @@
     "\n",
     "$$\n",
     "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2}. \\tag{3}\n",
+    "$$\n",
+    "\n",
+    "### 2.2 Fama–French Three-Factor Model (FF3FM)\n",
+    "\n",
+    "The [Fama-French Three-Factor Model](https://en.wikipedia.org/wiki/Fama%E2%80%93French_three-factor_model) (FF3FM) is defined as follows:\n",
+    "\n",
+    "$$\n",
+    "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i \\tag{4}\n",
+    "$$\n",
+    "\n",
+    "Assume $\\mathbb{E}[\\epsilon_i] = 0$; therefore,\n",
+    "\n",
+    "$$\n",
+    "\\rho_i = r_f + \\beta_i^3 (\\rho_M - r_f) + b_i^s \\rho_{\\text{SMB}} + b_i^v \\rho_{\\text{HML}} + \\alpha_i \\tag{5}\n",
     "$$"
    ]
   }
