--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -170,7 +170,9 @@
     "\n",
     "$$\n",
     "\\rho_i = r_f + \\beta_i^3 (\\rho_M - r_f) + b_i^s \\rho_{\\text{SMB}} + b_i^v \\rho_{\\text{HML}} + \\alpha_i \\tag{5}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "The $3$ coefficients $\\beta_i^3$, $b_i^s$, and $b_i^v$ are estimated by making a linear regression of the time series $y_i = \\rho_i - r_f$ against the time series $\\rho_M - r_f$ (**Momentum Factor**), $r_{\\text{SMB}}$ (**Size Factor**), and $\\rho_{\\text{HML}}$ (**Value Factor**). "
    ]
   }
  ],
