--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -174,7 +174,31 @@
     "\n",
     "The $3$ coefficients $\\beta_i^3$, $b_i^s$, and $b_i^v$ are estimated by making a linear regression of the time series $y_i = \\rho_i - r_f$ against the time series $\\rho_M - r_f$ (**Momentum Factor**), $r_{\\text{SMB}}$ (**Size Factor**), and $\\rho_{\\text{HML}}$ (**Value Factor**).\n",
     "\n",
-    "$\\beta_i^m \\neq \\beta_i^3$ in tandem with the requirement to be estimated via a separate regression or directly computed."
+    "$\\beta_i^m \\neq \\beta_i^3$ in tandem with the requirement to be estimated via a separate regression or directly computed.\n",
+    "\n",
+    "### 2.3 Executive Summary Formulation\n",
+    "\n",
+    "This section elaborates on the mathematical formulation established in Sections 2.1 but for executives (innumerate):\n",
+    "\n",
+    "#### 2.3.1 Strategy [I](https://en.wikipedia.org/wiki/Roman_numerals) Breakdown\n",
+    "\n",
+    "1. **Objective**: Maximize returns while considering risk (i.e., make as much **$\\$\\$\\$$** as humanly possible without it being (bi)polar)\n",
+    "2. **Constraints**: \n",
+    "   - The portfolio's beta (a measure of its *volatility* relative to the market; i.e., how *silly* and *spread out* it is relative to the 'market') must be between $-0.5$ and $0.5$.\n",
+    "   - The sum of the weights assigned to each asset in the portfolio must equal $1$ (i.e., ***we gotta put our money to work!*** As such, let's buy a bunch of stuff that can make us money but, also, let's (try) not to violate the [Laws of Probability Theory](https://en.wikipedia.org/wiki/Probability_measure)).\n",
+    "   - Each individual weight can range from $-2$ to $2$ (i.e., we can be like *[certain individuals](https://www.reddit.com/r/wallstreetbets/comments/l3k9ie/2_million_degenerates/)* from [WallStreetBets](https://en.wikipedia.org/wiki/R/wallstreetbets) and put all our eggs in one basket or, like a more prudent investor, do anything *but that*).\n",
+    "\n",
+    "#### 2.3.2 Strategy [II](https://en.wikipedia.org/wiki/Roman_numerals) Breakdown\n",
+    "\n",
+    "1. **Objective**: Maximize returns relative to the portfolio's **tracking error volatility** (**TEV**), which measures how much the portfolio's returns deviate from a benchmark (e.g., the S&P 500 or 'big boy stock market').\n",
+    "2. **Constraints**:\n",
+    "   - The portfolio's beta (a measure of its *volatility* relative to the market; i.e., how *wild* and *crazy* it gets compared to the 'market') must be between $-2$ and $2$.\n",
+    "   - The sum of the weights assigned to each asset in the portfolio must equal $1$ (i.e., ***we need to make sure all our money is actively working!*** So, let's diversify our investments while still following the [Laws of Probability Theory](https://en.wikipedia.org/wiki/Probability_measure)).\n",
+    "   - Each individual weight can range from $-2$ to $2$ (i.e., we can either go *all in* on one asset like *[those wild investors](https://www.reddit.com/r/wallstreetbets/comments/l3k9ie/2_million_degenerates/)* on [WallStreetBets](https://en.wikipedia.org/wiki/R/wallstreetbets), or spread our investments more wisely).\n",
+    "\n",
+    "Don't worry about all the fancy schmancy 'math'(matics); math is for nerds (yours truly, included). All math is, is it's another language. The more you practice it, the better you get.\n",
+    "\n",
+    "Anyways, that's enough of my rambling and yapping. Let's explore the setup (in da next section *insert cool kid emoji*)!"
    ]
   }
  ],
