--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -200,6 +200,14 @@
     "\n",
     "The next section establishes the necessary assumptions considered for strategic formulation and implementation."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3 $\\,$ Assumptions and (Analysis) Setup\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
