--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -34,22 +34,19 @@
     "\n",
     "### 1.1 Goal\n",
     "\n",
-    "The goal of this project to build and compare *two factor-based long short allocation models* with constraints on their *betas*. The first strategy considers a **target Beta** in the interval $[-0.5, 0.5]$, while the second has a target Beta in the interval $[-2, +2]$.\n",
+    "The goal of this project to build and compare two factor-based long short allocation models with constraints on their betas. The first strategy considers a target Beta in the interval $[-0.5, 0.5]$ while the second has one in the interval $[-2, +2]$.\n",
     "\n",
-    "The first strategy operates similar to a **Value-at-Risk Utility** corresponding to **Robust Optimization**; the second strategy incorporates an **Information Ratio** term to limit the deviations from a benchmark, provided those deviations yield a 'high return.'\n",
+    "The first strategy operates similar to a Value-at-Risk Utility corresponding to Robust Optimization; the second strategy incorporates an Information Ratio term to limit the deviations from a benchmark.\n",
     "\n",
-    "Once the optimization models are built, we want to *compare* the outcomes of the two models while simultaneously evaluating their sensitivity to the *length* of the estimators for the **covariance matrix** in tandem with the **expected returns** under various market regimes/scenarios.\n",
+    "Once the optimization models are built, I will compare the outcomes of the two models while simultaneously evaluating their sensitivity to the length of the estimators for the covariance matrix in tandem with the expected returns under various market regimes.\n",
     "\n",
     "### 1.2 Reallocation\n",
     "\n",
-    "The portfolios will be *reallocated* or, in other words, 'reoptimized' weekly from the beginning of **March 2007** to the end of **March 2024**. Our *investment universe* encompasses a set of exchange-traded funds (**ETFs**) which is large enough to represent the '**Global World Economy**.'\n",
+    "The portfolios will be reallocated weekly from the beginning of March 2007 to the end of March 2024. Our investment universe encompasses a set of ETFs to represent the 'Global World Economy.'\n",
     "\n",
-    "We will utilize the [Fama–French Three-Factor Model](https://en.wikipedia.org/wiki/Fama%E2%80%93French_three-factor_model) which incorporates the following factors:\n",
-    "- [Momentum](https://en.wikipedia.org/wiki/Momentum_investing)\n",
-    "- [Value](https://en.wikipedia.org/wiki/Value_investing)\n",
-    "- [Size](https://en.wikipedia.org/wiki/Market_capitalization).\n",
+    "I will utilize the Fama–French Three-Factor Model which incorporates 'Momentum,' 'Value,' and 'Size.'\n",
     "\n",
-    "Regarding data accessability, these factors have historical values available for ***free*** from ***Ken French's*** [personal website](https://mba.tuck.dartmouth.edu/pages/faculty/ken.french/) in tandem with Yahoo Finance.\n",
+    "The data is publicly available.\n",
     "\n",
     "### 1.3 Performance Evaluation\n",
     "\n",
@@ -206,7 +203,21 @@
    "metadata": {},
    "source": [
     "## 3 $\\,$ Assumptions and (Analysis) Setup\n",
-    "\n"
+    "\n",
+    "### 3.1 Setup\n",
+    "\n",
+    "To simplify, we will make the following assumptions for this experiment:\n",
+    "\n",
+    "1. The portfolios will be reallocated weekly from the beginning of **March 2007** to the end of **March 2024**.\n",
+    "\n",
+    "2. I define three cases:\n",
+    "    - $\\text{Long-Term Look-Back Period} : 120 \\, \\text{Data Points}$ for estimation of a $\\text{Sample Covariance} \\; \\& \\; \\text{Sample Mean}$; i.e., $\\text{Scenario LT} \\equiv S_{120}$.\n",
+    "    - $\\text{Medium-Term Look-Back Period} : 90 \\, \\text{Data Points}$ for estimation of a $\\text{Sample Covariance} \\; \\& \\; \\text{Sample Mean}$; i.e., $\\text{Scenario MT} \\equiv S_{90}$.\n",
+    "    - $\\text{Short-Term Look-Back Period} : 40 \\, \\text{Data Points}$ for estimation of a $\\text{Sample Covariance} \\; \\& \\; \\text{Sample Mean}$; i.e., $\\text{Scenario ST} \\equiv S_{40}$.\n",
+    "\n",
+    "3. Consider two possible values for the **Target Beta** (again, ***not*** the [colloquial slang term](https://en.wikipedia.org/wiki/Alpha_and_beta_male)) $: 0 \\; \\& \\; 1$.\n",
+    "\n",
+    "4. Consider two possible values for the $\\boldsymbol{\\lambda}$ (the ***risk aversion parameter***; i.e., how much are you [putting on black?](https://en.wikipedia.org/wiki/All_on_Black)) $: 0.10 \\; \\& \\; 0.50$."
    ]
   }
  ],
