--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -42,19 +42,17 @@
     "\n",
     "### 1.2 Reallocation\n",
     "\n",
-    "The portfolios will be reallocated weekly from the beginning of March 2007 to the end of March 2024. Our investment universe encompasses a set of ETFs to represent the 'Global World Economy.'\n",
+    "The portfolios will be reallocated weekly from the beginning of March 2007 to the end of March 2024. My investment universe encompasses a set of ETFs to represent the 'Global World Economy.'\n",
     "\n",
-    "I will utilize the Fama–French Three-Factor Model which incorporates 'Momentum,' 'Value,' and 'Size.'\n",
+    "I will utilize the Fama–French Three-Factor Model $(\\text{Momentum, Value, Size})$.\n",
     "\n",
     "The data is publicly available.\n",
     "\n",
     "### 1.3 Performance Evaluation\n",
     "\n",
-    "Naturally, the performance as well as the risk profiles of the aforementioned strategies may be (relatively) sensitive to the *target Beta* and the (current) market environment. \n",
+    "The performance and risk profiles of the strategies are sensitive to the target Beta and the market environment.\n",
     "\n",
-    "For example, a '**low Beta**' (essentially) means that a strategy is created with the objective or aim to be '**decorrelated**' (no linear relationship between entites) with the 'Global Market,' which, in our case, is represented by the **S&P 500** (i.e., no *systematic relationship*).\n",
-    "\n",
-    "A '**high Beta**' is simply the antithesis, or opposite, of what we just discussed. In layman's terms, we have a (higher) appetite for '*risk*' (in this case, let's keep it simple and define our premise as $\\sigma$ or **standard deviation**) and desire to ride or 'scale up' the *market risk* (**systematic risk**). \n",
+    "A low Beta indicates decorrelation with the 'Global Market;' a high Beta is the antithesis.\n",
     "\n",
     "Moreover, it's imperative that one acknowledges that such a (described) strategy is more probable to be (quite) sensitive to the *estimators* used for the **Risk Model** and the **Alpha Model** (e.g., the length of the *look-back period* utilized); therefore, it is necessary to understand and, most importantly, *comprehend* the impact of said estimators on the **Portfolio's** characteristics:\n",
     "- (Realized) [Return](https://en.wikipedia.org/wiki/Rate_of_return) : $\\mu_h$\n",
