--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -54,16 +54,16 @@
     "\n",
     "A low Beta indicates decorrelation with the 'Global Market;' a high Beta is the antithesis.\n",
     "\n",
-    "Moreover, it's imperative that one acknowledges that such a (described) strategy is more probable to be (quite) sensitive to the *estimators* used for the **Risk Model** and the **Alpha Model** (e.g., the length of the *look-back period* utilized); therefore, it is necessary to understand and, most importantly, *comprehend* the impact of said estimators on the **Portfolio's** characteristics:\n",
-    "- (Realized) [Return](https://en.wikipedia.org/wiki/Rate_of_return) : $\\mu_h$\n",
+    "Portfolio Characteristics Definition:\n",
+    "- $\\text{Return} : \\mu_h$\n",
     "\n",
-    "- (Historical) [Volatility](https://en.wikipedia.org/wiki/Volatility_(finance)) : $\\sigma_h$\n",
+    "- $\\text{Vol} : \\sigma_h$\n",
     "\n",
-    "- [Skewness](https://en.wikipedia.org/wiki/Skewness) : $(\\mathbb{E}[(\\frac{x - \\mu}{\\sigma})^3]) = \\frac{\\mu_3}{\\sigma_3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}}$\n",
+    "- $\\text{Skew} : (\\mathbb{E}[(\\frac{x - \\mu}{\\sigma})^3]) = \\frac{\\mu_3}{\\sigma_3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}}$\n",
     "\n",
-    "- [VaR](https://en.wikipedia.org/wiki/Value_at_risk) / [Expected Shortfall](https://en.wikipedia.org/wiki/Expected_shortfall)\n",
+    "- $\\text{VaR / Expected Shortfall}$\n",
     "\n",
-    "- [Sharpe Ratio](https://en.wikipedia.org/wiki/Sharpe_ratio) : $S_a = \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}}$\n",
+    "- $\\text{Sharpe} : \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}}$\n",
     "\n",
     "### 1.4 Simplification\n",
     "\n",
