--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -34,11 +34,11 @@
     "\n",
     "### 1.1 Goal\n",
     "\n",
-    "The goal of this project to build and compare two factor-based long short allocation models with constraints on their betas. The first strategy considers a target Beta in the interval $[-0.5, 0.5]$ while the second has one in the interval $[-2, +2]$.\n",
+    "The objective is to build and compare two factor-based long short allocation models with constraints on their betas. The first strategy considers a target Beta in the interval $[-0.5, 0.5]$ while the second has one in the interval $[-2, +2]$.\n",
     "\n",
-    "The first strategy operates similar to a Value-at-Risk Utility corresponding to Robust Optimization; the second strategy incorporates an Information Ratio term to limit the deviations from a benchmark.\n",
+    "The first operates similar to a Value-at-Risk Utility (Robust Optimization); the second incorporates an Information Ratio.\n",
     "\n",
-    "Once the optimization models are built, I will compare the outcomes of the two models while simultaneously evaluating their sensitivity to the length of the estimators for the covariance matrix in tandem with the expected returns under various market regimes.\n",
+    "Post optimization, I compare the model outcomes while evaluating their sensitivity to estimator length for the covariance matrix and expected returns across market regimes. \n",
     "\n",
     "### 1.2 Reallocation\n",
     "\n",
