--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -42,9 +42,11 @@
     "\n",
     "### 1.2 Reallocation\n",
     "\n",
-    "The portfolios will be reallocated weekly from the beginning of March 2007 to the end of March 2024. My investment universe encompasses a set of ETFs to represent the 'Global World Economy.'\n",
+    "The portfolios are reallocated weekly from `03-01-2007` to `03-31-2024`. \n",
     "\n",
-    "I will utilize the Fama–French Three-Factor Model $(\\text{Momentum, Value, Size})$.\n",
+    "My investment universe $\\equiv$ ETFs ('Global World Economy').\n",
+    "\n",
+    "I use the Fama–French Three-Factor Model $(\\text{Momentum, Value, Size})$.\n",
     "\n",
     "The data is publicly available.\n",
     "\n",
