--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -52,9 +52,9 @@
     "\n",
     "### 1.3 Performance Evaluation\n",
     "\n",
-    "The performance and risk profiles of the strategies are sensitive to the target Beta and the market environment.\n",
+    "The performance / risk profiles are sensitive to the target Beta and the market environment.\n",
     "\n",
-    "A low Beta indicates decorrelation with the 'Global Market;' a high Beta is the antithesis.\n",
+    "A low Beta indicates decorrelation; a high Beta is the antithesis.\n",
     "\n",
     "Portfolio Characteristics Definition:\n",
     "- $\\text{Return} : \\mu_h$\n",
