--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -57,9 +57,9 @@
     "A low Beta indicates decorrelation; a high Beta is the antithesis.\n",
     "\n",
     "Portfolio Characteristics Definition:\n",
-    "- $\\text{Return} : \\mu_h$\n",
+    "- $\\text{Return} : \\mu$\n",
     "\n",
-    "- $\\text{Vol} : \\sigma_h$\n",
+    "- $\\text{Vol} : \\sigma$\n",
     "\n",
     "- $\\text{Skew} : (\\mathbb{E}[(\\frac{x - \\mu}{\\sigma})^3]) = \\frac{\\mu_3}{\\sigma_3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}}$\n",
     "\n",
