--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -69,12 +69,16 @@
     "\n",
     "### 1.4 Simplification\n",
     "\n",
-    "To make it easier, we assume that once the **Factor Model** (FM) has been constructed, we will use [trend following](https://en.wikipedia.org/wiki/Trend_following) estimators for the **Expected Returns**. Since the quality of the estimators depend on the **look-back period**, we define three cases:\n",
-    "- ***Long-Term Estimator (LTE)*** : $\\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}$.\n",
-    "- ***Mid-Term Estimator (MTE)*** : $\\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\}$.\n",
-    "- ***Short-Term Estimator (STE)*** : $\\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\}$. \n",
+    "Post Factor Model (FM) construction, I use trend following estimators for $\\bf{\\mu}$. \n",
     "\n",
-    "Specifically, we define a **Term-Structure** for the $\\text{Covariance} \\; \\boldsymbol{\\Sigma}$ and $\\text{Expected Return} \\; \\boldsymbol{\\mu}$.\n",
+    "The estimator quality depends on the look-back (LB) period; therefore:\n",
+    "- $\\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}.$\n",
+    "\n",
+    "- $\\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\}.$\n",
+    "\n",
+    "- $\\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\}.$\n",
+    "\n",
+    "I define **Term-Structure** for $\\text{Covariance} \\; \\boldsymbol{\\Sigma} \\; / \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}$.\n",
     "\n",
     "### 1.5 Synthesis\n",
     "\n",
