--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -71,18 +71,22 @@
     "\n",
     "Post Factor Model (FM) construction, I use trend following estimators for $\\bf{\\mu}$. \n",
     "\n",
-    "The estimator quality depends on the look-back (LB) period; therefore:\n",
+    "The estimator quality depends on the look-back (LB) period; $\\therefore$\n",
     "- $\\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}.$\n",
     "\n",
     "- $\\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\}.$\n",
     "\n",
     "- $\\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\}.$\n",
     "\n",
-    "I define **Term-Structure** for $\\text{Covariance} \\; \\boldsymbol{\\Sigma} \\; / \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}$.\n",
+    "I define **Term-Structure** for $\\text{Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}$.\n",
     "\n",
     "### 1.5 Synthesis\n",
     "\n",
-    "To (briefly) summarize, the behavior of a (potential) '*optimal*' portfolio built from a melting pot of *estimators* for **Covariance** and **Expected Return** may vary according to the cadence of the '**Market**' (environment/regime) or an aforementioned strategy. \n",
+    "Optimal portfolio behavior constructed from covariance and expected return estimators will vary due to strategic and market differences.\n",
+    "\n",
+    "$$\n",
+    "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{1}\n",
+    "$$\n",
     "\n",
     "For example, the (mathematical) notation $S_{40}^{90}$ is implemented to illustrate that we are using **40 days** for the covariance estimation and **90 days** for the expected returns estimations.\n",
     "\n",
