--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -88,9 +88,10 @@
     "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{1}\n",
     "$$\n",
     "\n",
-    "For example, the (mathematical) notation $S_{40}^{90}$ is implemented to illustrate that we are using **40 days** for the covariance estimation and **90 days** for the expected returns estimations.\n",
-    "\n",
-    "Overall, the goal of this experiment is to conceptualize, visualize, understand, analyze, and compare the behavior of our hypotheses; we want to see if we can deliver robust risk-adjusted performance, especially during momentous, historical periods such as the **Subprime Mortgage Crisis** of *2008*, the horrendous commencement of **Coronavirus SARS-CoV-2 Disease** of *2019*, et cetera."
+    "$\\text{Goal} :$\n",
+    "- $\\text{Evaluate Hypothesis}$\n",
+    "- $\\text{Demonstrate Robustness (Or Lack Thereof)}$\n",
+    "- $\\text{Market Regime Stratification}$\n"
    ]
   },
   {
