--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -12,18 +12,18 @@
     "\n",
     "**Pledge**: I pledge my honor that I have abided by the Stevens Honor System.\n",
     "\n",
-    "**Professor**: [Papa Momar Ndiaye](https://www.stevens.edu/profile/pndiaye)"
+    "**Professor**: Papa Momar Ndiaye"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0 $\\,$ Disclaimer\n",
+    "## 0 $\\,$ Amendment\n",
     "\n",
-    "This work is in response to the original (numerical) grade I received as a $\\bf{25\\%}$ due to my imprudence and deviation from the requested prompt.\n",
+    "$\\text{Response to} \\; \\bf{25\\%}.$\n",
     "\n",
-    "I (profusely) apologize for my incompetence; **This is my corrective action.**"
+    "$\\text{This is my corrective action.}$"
    ]
   },
   {
