--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# FE630 - Final Project (Revision)\n",
     "\n",
-    "**Author**: Sid Bhatia\n",
+    "**Author**: Siddharth Bhatia\n",
     "\n",
     "**Date**: May 15th, 2024\n",
     "\n",
@@ -91,7 +91,7 @@
     "$\\text{Goal} :$\n",
     "- $\\text{Evaluate Hypothesis}$\n",
     "- $\\text{Demonstrate Robustness (Or Lack Thereof)}$\n",
-    "- $\\text{Market Regime Stratification}$\n"
+    "- $\\text{Market Regime Stratification}$"
    ]
   },
   {
@@ -100,11 +100,11 @@
    "source": [
     "## 2 $\\,$ (Investment) Strategy\n",
     "\n",
-    "This section delves into the theoretical and mathematical formulations for the investment strategy employed; it is not for the faint of heart.\n",
+    "$\\text{Theory \\& Math}$\n",
     "\n",
     "### 2.1 (Mathematical) Strategic Formulation\n",
     "\n",
-    "Consider the following two strategies:\n",
+    "$\\text{Consider two strategies}$:\n",
     "\n",
     "$$\n",
     "\\text{(Strategy I)} \n",
@@ -128,7 +128,7 @@
     "\\tag{1}\n",
     "$$\n",
     "\n",
-    "and\n",
+    "$\\text{and}$\n",
     "\n",
     "$$\n",
     "\\text{(Strategy II)} \n",
@@ -152,11 +152,9 @@
     "\n",
     "\\tag{2}\n",
     "$$\n",
+    "- $\\Sigma \\equiv \\text{covariance matrix between security returns (FF3FM).}$\n",
     "\n",
-    "where we define the constructions above:\n",
-    "- $\\Sigma$ is the [covariance matrix](https://en.wikipedia.org/wiki/Covariance_matrix) between the securities returns (as computed from the **FF3FM**);\n",
-    "\n",
-    "- $\\beta_i^m = \\frac{\\text{Cov}(r_i, r_M)}{\\sigma^2(r_M)}$ is the [Beta](https://en.wikipedia.org/wiki/Beta_(finance)) of some [security](https://en.wikipedia.org/wiki/Security_(finance)) $S_i$ as defined by the [CAPM Model](https://en.wikipedia.org/wiki/Capital_asset_pricing_model) such that $\\beta_P^m = \\sum_{i = 1}^n \\beta_i^m \\omega_i$ is the **Portfolio Beta**;\n",
+    "- $\\beta_i^m = \\frac{\\text{Cov}(r_i, r_M)}{\\sigma^2(r_M)} \\equiv \\text{Beta of security} \\; S_i \\; \\text{(CAPM) s.t.} \\; \\beta_P^m = \\sum_{i = 1}^n \\beta_i^m \\omega_i \\equiv \\text{Porfolio Beta};$\n",
     "\n",
     "- $\\text{TEV}(\\omega) = \\sigma(r_P(\\omega) - r_{\\text{SPY}})$ is the '**Tracking Error Volatility**'; the derivation is trivial and left as an exercise to the reader:\n",
     "\n",
