--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -4,22 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FE630 - Final Project (Revision)\n",
-    "\n",
-    "**Author**: Siddharth Bhatia\n",
-    "\n",
-    "**Date**: May 15th, 2024\n",
-    "\n",
-    "**Pledge**: I pledge my honor that I have abided by the Stevens Honor System.\n",
-    "\n",
-    "**Professor**: Papa Momar Ndiaye"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 0 $\\,$ Amendment\n",
+    "## $0 \\; \\text{Amendment}$\n",
     "\n",
     "$\\text{Response to} \\; \\bf{25\\%}.$\n",
     "\n",
