--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $0 \\; \\text{Amendment}$\n",
+    "## $0 \\; \\; \\text{Amendment}$\n",
     "\n",
     "$\\text{Response to} \\; \\bf{25\\%}.$\n",
     "\n",
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 $\\,$ Overview\n",
+    "## $1 \\; \\; \\text{Overview}$\n",
     "\n",
     "### 1.1 Goal\n",
     "\n",
