--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## $1 \\; \\; \\text{Overview}$\n",
     "\n",
-    "### 1.1 Goal\n",
+    "### $1.1 \\; \\text{Goal}$\n",
     "\n",
     "The objective is to build and compare two factor-based long short allocation models with constraints on their betas. The first strategy considers a target Beta in the interval $[-0.5, 0.5]$ while the second has one in the interval $[-2, +2]$.\n",
     "\n",
