--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## $0 \\; \\; \\text{Amendment}$\n",
     "\n",
-    "$\\text{Response to} \\; \\bf{25\\%}.$\n",
+    "$\\text{Response to} \\; \\bf{25\\%};$\n",
     "\n",
     "$\\text{This is my corrective action.}$"
    ]
