--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -19,25 +19,25 @@
     "\n",
     "### $1.1 \\; \\text{Goal}$\n",
     "\n",
-    "$\\text{The objective is to build and compare two factor-based long short allocation models with constraints on their betas.}$ \n",
+    "$ \\text{The objective is to build and compare two factor-based long short allocation models with constraints on their betas.} $ \n",
     "\n",
-    "$\\text{The first strategy considers a target Beta in the interval} \\; [-0.5, 0.5] \\; \\text{while the second has one in the interval} \\; [-2, +2]$.\n",
+    "$ \\text{The first strategy considers a target Beta in the interval} \\; [-0.5, 0.5] \\; \\text{while the second has one in the interval} \\; [-2, +2] $.\n",
     "\n",
-    "$\\text{The first operates similar to a Value-at-Risk Utility (Robust Optimization); the second incorporates an Information Ratio.}$\n",
+    "$ \\text{The first operates similar to a Value-at-Risk Utility (Robust Optimization); the second incorporates an Information Ratio.} $\n",
     "\n",
-    "$\\text{Post optimization, I compare the model outcomes while evaluating their sensitivity to estimator length for the covariance matrix}\n",
+    "$ \\text{Post optimization, I compare the model outcomes while evaluating their sensitivity to estimator length for the covariance matrix}\n",
     "\\\\\n",
-    "\\text{and expected returns across market regimes.}$\n",
+    "\\text{and expected returns across market regimes}. $\n",
     "\n",
-    "### 1.2 Reallocation\n",
+    "### $1.2 \\; \\text{Reallocation}$\n",
     "\n",
-    "The portfolios are reallocated weekly from `03-01-2007` to `03-31-2024`. \n",
+    "$ \\text{The portfolios are reallocated weekly from} \\, \\texttt{`03-01-2007`} \\, \\text{to} \\, \\text{`03-31-2024`}. $ \n",
     "\n",
-    "My investment universe $\\equiv$ ETFs ('Global World Economy').\n",
+    "$ \\text{My investment universe} \\equiv \\text{ETFs ('Global World Economy')}. $\n",
     "\n",
-    "I use the Fama–French Three-Factor Model $(\\text{Momentum, Value, Size})$.\n",
+    "$ \\text{I use the Fama–French Three-Factor Model (Momentum, Value, Size)}. $\n",
     "\n",
-    "The data is publicly available.\n",
+    "$ \\text{The data is publicly available}. $\n",
     "\n",
     "### 1.3 Performance Evaluation\n",
     "\n",
